docs: add env.template

--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,13 @@
-# .env
-PORT=3001
+PORT=
 
-# Credenciales de PostgreSQL
-DB_HOST=localhost
-DB_PORT=5432
-DATABASE_URL
-POSTGRES_USER
-POSTGRES_PASSWORD
-POSTGRES_DB
+# Variables para el servicio de la app
+DB_USER=
+DB_PASSWORD=
+DB_DATABASE=
+DB_HOST=
+DB_PORT=
+
+# Variables para el servicio de la base de datos
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
